feat: add event organizer workspace
